# my-vpn

./: .env.example  .gitignore  AGENTS.md  README.md  old_thouts.md  pyproject.toml  run.sh
old_scripts/: socks_bins_load.sh  vpn_start.sh  vpn_stop.sh
src/: main.py
src/vpn_cli/: main.py  utils.py
